Commit for the following Changes:      MyTreeView - Prevent to show horizontal scroll bar and tooltips added on each connection shown in ConnectionList.      OpacityControl - Added User control. This will be used to apply opacity on images.      Update to use opacity control in Separator Image on Panels :  DBObjectSelectionPanel, SchemaSelectionPanel, WelcomePanel.

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -336,6 +336,9 @@
     <Compile Include="Forms\PasswordDialog.designer.cs">
       <DependentUpon>PasswordDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\OpacityControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Panels\AutoStyleableBasePanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
