- Removed Classes\MySQLSchemaInfo.cs from Bazaar. - Refactored the MultiHeaderDataGridView class to inherit from DataGridView and to remove a bunch of unused code, with this also the MultiHeaderDataGridView.Designer.cs and MultiHeaderDataGridView.resx could be removed from the project and from Bazaar (Controls\MultiHeaderDataGridView.cs, Controls\MultiHeaderDataGridView.Designer.cs, MySQL.ForExcel.csproj). - Disabled "Always Store Mapping Automatically" and "Reload stored column mapping for selected table automatically" advanced options and "Store Mapping" button for Append Data Dialog (Forms\AppendAdvancedOptionsDialog.Designer.cs, Forms\AppendAdvancedOptionsDialog.cs, Forms\AppendDataForm.Designer.cs, Forms\AppendDataForm.cs). - Re-added the grdToMySQLTable grid in AppendDataForm dialog to refresh properties, also refactored several grid event method names to match the new grid names (Forms\AppendDataForm.Designer.cs, Forms\AppendDataForm.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -235,10 +235,7 @@
       <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\MultiHeaderDataGridView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\MultiHeaderDataGridView.Designer.cs">
-      <DependentUpon>MultiHeaderDataGridView.cs</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\MyTreeView.cs">
       <SubType>Component</SubType>
@@ -371,9 +368,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ManageTaskPaneRibbon.resx">
       <DependentUpon>ManageTaskPaneRibbon.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\MultiHeaderDataGridView.resx">
-      <DependentUpon>MultiHeaderDataGridView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\SearchEdit.resx">
       <DependentUpon>SearchEdit.cs</DependentUpon>
