--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -285,11 +285,11 @@
     <Compile Include="Forms\AppendNewColumnMappingDialog.Designer.cs">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ImportRoutineForm.cs">
+    <Compile Include="Forms\ImportProcedureForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ImportRoutineForm.Designer.cs">
-      <DependentUpon>ImportRoutineForm.cs</DependentUpon>
+    <Compile Include="Forms\ImportProcedureForm.Designer.cs">
+      <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ImportTableViewForm.cs">
       <SubType>Form</SubType>
@@ -390,8 +390,8 @@
     <EmbeddedResource Include="Forms\AppendNewColumnMappingDialog.resx">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ImportRoutineForm.resx">
-      <DependentUpon>ImportRoutineForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ImportProcedureForm.resx">
+      <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportTableViewForm.resx">
       <DependentUpon>ImportTableViewForm.cs</DependentUpon>
@@ -449,7 +449,6 @@
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
     </Compile>
-    <None Include="Resources\db.Routine.32x32.png" />
     <None Include="Resources\db.Table.32x32.png" />
     <None Include="Resources\db.View.32x32.png" />
     <None Include="ThisAddIn.Designer.xml">
