--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -498,6 +498,13 @@
     <None Include="Resources\MySQLforExcel-ImportRoutineDlg-Params-32x32.png" />
     <None Include="Resources\MySQLforExcel-ImportRoutineDlg-Options-32x32.png" />
     <None Include="Resources\MySQLforExcel-Input-64x64.png" />
+    <None Include="Resources\MySQLforExcel-Cursor-Dropable-32x32.png" />
+    <None Include="Resources\MySQLforExcel-Cursor-Trash-32x32.png" />
+    <None Include="Resources\MySQLforExcel-EditDataDlg-Sakila-16x16.png" />
+    <None Include="Resources\MySQLforExcel-InfoDlg-Error-64x64.png" />
+    <None Include="Resources\MySQLforExcel-InfoDlg-Success-64x64.png" />
+    <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-Disabled-24x24.png" />
+    <None Include="Resources\MySQLforExcel-Cursor-Dragging-32x32.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
