- Added insertQuery and exception output parameters to InsertData method to return this information to use it on the new InfoDialog displayed with the Append Data Dialog, also added proper formatting with new lines (Classes\ExportDataHelper.cs). - Added output parameters to return this information to use it on the new InfoDialog displayed with the Export Data Dialog, also added proper formatting with new lines (Classes\MySQLDataTable.cs). - Changed name of ribbon group from "MySQL" to "Database" as per MikeZ (Controls\ManageTaskPaneRibbon.Designer.cs). - Added excelApplication_SheetActivate, excelApplication_SheetDeativate methods and code to EditTableData and CloseAddIn to manage the Edit Dialog forms per table and per worksheet (Controls\TaskPaneControl.cs). - Moved code to create a new worksheet and check for an existing name to GetActiveOrCreateWorksheet, and called this method from the EditTableData and ImportDataToExcel methods (Controls\TaskPaneControl.cs). - Renamed OpacityControl to TransparentPictureBox (Controls\TransparentPictureBox.cs, Panels\DBObjectSelectionPanel.Designer.cs, Panels\SchemaSelectionPanel.Designer.cs, Panels\WelcomePanel.Designer.cs). - Changed the border style for options dialogs to match other dialogs (Forms\AppendAdvancedOptionsDialog.Designer.cs, Forms\ExportAdvancedOptionsDialog.Designer.cs). - Made cosmetic adjustments to controls inside New dialogs as per MikeZ (Forms\AppendNewColumnMappingDialog.Designer.cs, Forms\NewSchemaDialog.Designer.cs). - Added code to paint background of Excel cells when modifying, commiting or reverting data in changeExcelCellsColor, EditingWorksheet_Change, pushDataChanges and revertDataChanges methods (Forms\EditDataDialog.cs). - Added code to display new InfoDialog when performing an operation to let users know the status of it or if there were errors (Forms\EditDataDialog.cs, Forms\AppendDataForm.cs, Forms\ExportDataForm.cs). - Added EditDataRevertDialog to show Refresh from DB or Revert to Original

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -285,6 +285,12 @@
     <Compile Include="Forms\AppendNewColumnMappingDialog.Designer.cs">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\EditDataRevertDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditDataRevertDialog.Designer.cs">
+      <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ImportProcedureForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -315,6 +321,12 @@
     <Compile Include="Forms\ExportDataForm.Designer.cs">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InfoDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InfoDialog.Designer.cs">
+      <DependentUpon>InfoDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\NewConnectionDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -333,7 +345,7 @@
     <Compile Include="Forms\PasswordDialog.designer.cs">
       <DependentUpon>PasswordDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\OpacityControl.cs">
+    <Compile Include="Controls\TransparentPictureBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Panels\AutoStyleableBasePanel.cs">
@@ -390,6 +402,9 @@
     <EmbeddedResource Include="Forms\AppendNewColumnMappingDialog.resx">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditDataRevertDialog.resx">
+      <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImportProcedureForm.resx">
       <DependentUpon>ImportProcedureForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -404,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ExportDataForm.resx">
       <DependentUpon>ExportDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InfoDialog.resx">
+      <DependentUpon>InfoDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewConnectionDialog.resx">
       <DependentUpon>NewConnectionDialog.cs</DependentUpon>
