--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -220,6 +220,9 @@
     </Compile>
     <Compile Include="Classes\MySQLIndex.cs" />
     <Compile Include="Classes\MySQLTable.cs" />
+    <Compile Include="Controls\PreviewDataGridView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\StyleableHelper.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="Controls\HotLabel.cs">
@@ -431,6 +434,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PasswordDialog.resx">
       <DependentUpon>PasswordDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Panels\AutoStyleableBasePanel.resx">
+      <DependentUpon>AutoStyleableBasePanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Panels\DBObjectSelectionPanel.resx">
       <DependentUpon>DBObjectSelectionPanel.cs</DependentUpon>
