- Changed code in FirstColumnContainsIntegers getter that was returning true even when the column did not contain integers when the data contained 1 row and the FirstRowIsHeaders was true (Forms\MySQLDataTable.cs) - Changed GetSQL method of MySQLDataColumn class to wrap the column name on backtick characters to support column names with spaces or numeric column names (Classes\MySQLDataTable.cs). - Modified the GetMySQLExportDataType method to always return the detected type as integer even if the value is a 0 or a 1 since before it was returning Bool for those values (Classes\Utilities.cs). - Moved core logic to map a column to applySingleMapping method which also fixes a problem of properly coloring the mapped/unmapped columns on the From Grid and To Grid; this method is now called by the applySelectedStoredColumnMapping and performManualSingleColumnMapping methods.  Changed code in clearMappingsOnToTableGridAndMySQLTable method to properly color the background of selected column headers with the same color as unselected ones. (Forms\AppendDataForm.cs). - Added WarningDialog class which replaces the Utilities.ShowWarning calls, to have a warning dialog that has a consistent look with the InfoDialog (for Errors or Success messages) (Forms\WarningDialog.cs, Forms\WarningDialog.Designer.cs, Forms\WarningDialog.resx, MySQL.ForExcel.csproj). - Changed code in grdFromExcelData_DataBindingComplete and grdToMySQLTable_DragDrop methods to use the new WarningDialog and replace the Utilities.ShowWarning call (Forms\AppendDataForm.cs). - Changed code in btnExport_Click  meethod to use the new WarningDialog and replace the Utilities.ShowWarning call (Forms\ExportDataForm.cs). - Changed code in grdPreviewData_DataBindingComplete method to set the grdPreviewData.CurrentCell to null when we have ons single row and the First Row Contains Column Names is checked, also modified code in the refreshPrimaryKeyColumnsCombo method to properly retain the selected column when checking or un

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -288,6 +288,12 @@
     <Compile Include="Forms\AppendNewColumnMappingDialog.Designer.cs">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\WarningDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\WarningDialog.Designer.cs">
+      <DependentUpon>WarningDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EditDataRevertDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -404,6 +410,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AppendNewColumnMappingDialog.resx">
       <DependentUpon>AppendNewColumnMappingDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\WarningDialog.resx">
+      <DependentUpon>WarningDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditDataRevertDialog.resx">
       <DependentUpon>EditDataRevertDialog.cs</DependentUpon>
