- Made a huge refactoring to remove the ExportDataHelper, MySQLTable, MySQLColumn and MySQLIndex classes and files, and moved the needed logic to the MySQLDataTable class (Forms\AppendDataForm.cs, Forms\ExportDataForm.cs, Forms\EditDataDialog.cs, Classes\MySQLDataTable.cs, Controls\HotLabel.cs, Controls\TaskPaneControl.cs, Panels\DBObjectSelectionPanel.cs, Panels\SchemaSelectionPanel.cs). - Refactored the Utilities.cs file to split all methods on 3 static classes DataTypeUtilities, MySQLDataUtilities and MiscUtilities, also added new methods to the DataTypeUtilities class (Classes\Utilities.cs). - Fixed an error on the Automatic Mapping that was not detecting column types properly to match them with the Append To Table (Forms\AppendDataForm.cs). - Added a Save to the settings on the AppendAdvancedOptionsDialog and ExportAdvancedOptionsDialog (Forms\AppendAdvancedOptionsDialog.cs, Forms\ExportAdvancedOptionsDialog.cs). - Changed code in InfoDialog to hide the Show Details button when the operations details text is null or empty (Forms\InfoDialog.cs). - Added a new warning image to the resources and display it on the WarningDialog (Properties\Resources.Designer.cs, Properties\Resources.resx, Forms\WarningDialog.Designer.cs).

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -212,16 +212,12 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="Classes\ExportDataHelper.cs" />
-    <Compile Include="Classes\MySQLColumn.cs" />
+    <Compile Include="Classes\DBObject.cs" />
     <Compile Include="Classes\MySQLColumnMapping.cs" />
     <Compile Include="Classes\MySQLColumnMappingList.cs" />
-    <Compile Include="Classes\MySQLConnectionData.cs" />
     <Compile Include="Classes\MySQLDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Classes\MySQLIndex.cs" />
-    <Compile Include="Classes\MySQLTable.cs" />
     <Compile Include="Controls\PreviewDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -539,6 +535,7 @@
     <None Include="Resources\MySQLforExcel-InfoDlg-Success-64x64.png" />
     <None Include="Resources\MySQLforExcel-WelcomePanel-Connection-Disabled-24x24.png" />
     <None Include="Resources\MySQLforExcel-Cursor-Dragging-32x32.png" />
+    <None Include="Resources\MySQLforExcel-InfoDlg-Warning-64x64.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
