- Added 2 constructors to the MySQLColumnMapping class that receive another MySQLColumnMapping object and copy some or all of its properties; the 2 of them are used in the AppendDataForm code. Removed MatchWithOtherColumnMapping method since it is not being used anymore and added GetSourceColumnIndex, GetTargetColumnIndex and GetMappedSourceIndexIndex methods (Classes\MySQLColumnMapping.cs). - Minor refactoring to MySQLColumnMappingList class and moved SaveSettings method to the MiscUtilities static class for it to be used also by the ExportAdvancedOptionsDialog and AppendAdvancedOptionsDialog dialogs (Classes\MySQLColumnMappingList.cs, Classes\Utilities.cs, Forms\AppendAdvancedOptionsDialog.cs, Forms\ExportAdvancedOptionsDialog.cs). - Extracted MySQLColumnMapping class from Classes\MySQLDataTable.cs and created its onw file for it (Classes\MySQLDataColumn.cs, MySQL.ForExcel.csproj). - Added SchemaName property to MySQLDataTable class to generate all queries using the schema name on the query to be consistent with MySQL Workbench, modified all MySQLDataTable constructors to receive it as a parameter, also modified consumer classes to pass the schema name to the constructor (Classes\MySQLDataTable.cs, Forms\AppendDataForm.cs, Forms\ ExportDataForm.cs). - Added ColumnIsPrimaryKey, GetColumnIndex and GetColumnNamesArray methods to MySQLDataTable class (Classes\MySQLDataTable.cs). - Added IndexOfStringInArray, IndexOfIntInArray and SaveSettings static methods to MiscUtilities class (Classes\Utilities.cs). - Removed GetDataAdapterFromTable static methods from MySQLDataUtilities class since they are not being used anymore. Modified several methods to use schema on queries and to wrap schema name, table names and column names with backtick characters (Classes\Utilities.cs). - Made Mapping Method combobox and its dropped down list wider since with the latest change to append (<schema>.<table>) to the mapping name the combobox was too small (Forms\AppendDataForm.Designer.cs)

--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -215,6 +215,9 @@
     <Compile Include="Classes\DBObject.cs" />
     <Compile Include="Classes\MySQLColumnMapping.cs" />
     <Compile Include="Classes\MySQLColumnMappingList.cs" />
+    <Compile Include="Classes\MySQLDataColumn.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Classes\MySQLDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
