--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -456,6 +456,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Panels\WelcomePanel.resx">
       <DependentUpon>WelcomePanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
