--- a/source/MySQL.ForExcel.csproj
+++ b/source/MySQL.ForExcel.csproj
@@ -508,6 +508,8 @@
     <None Include="Resources\ExcelAddinFilter.png" />
     <Content Include="Resources\ArrowDown.png" />
     <Content Include="Resources\ArrowRight.png" />
+    <None Include="Resources\DeleteHS.png" />
+    <None Include="Resources\clear_output.png" />
     <Content Include="Resources\mysql-for-excel.ico" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-24x24.png" />
     <None Include="Resources\MySQLforExcel-ObjectPanel-EditData-Disabled-24x24.png" />
@@ -545,6 +547,7 @@
     <None Include="Resources\MySQLforExcel-Cursor-Dragging-32x32.png" />
     <None Include="Resources\MySQLforExcel-InfoDlg-Warning-64x64.png" />
     <Content Include="Resources\refresh_sidebar.png" />
+    <None Include="Resources\remove_col_mapping.png" />
     <Content Include="Resources\Warning.png" />
     <Content Include="Todo.txt" />
   </ItemGroup>
