- Added CloneSchema methods on the MySQLDataColumn and MySQLDataTable classes to clone the schema of table and column. (Classes\MySQLDataColumn.cs, Classes\MySQLDataTable.cs). - Changed SetData method to only recreate columns if told so, modified MySQLDataTable constructor used in ExportDataForm to only initialize basic properties but without doing the SetData since that will be done as needed from consumer forms. (Classes\MySQLDataTable.cs). - Changed GetInsertSQL and GetAppendSQL methods to stop at a row when the SQL query is going to exceed the Max Allowed Packet Size of the MySQL Server and output the row where it stopped so they can be called again to pick up from that row.  That way we do not generate huge queries anymore but truncate queries dynamically. (Classes\MySQLDataTable.cs). - Modified InsertDataWithManualQuery and AppendDataWithManualQuery methods to use transactions and to generate partial queries that do not exceed the Max Allowed Packet Size of the MySQL Server (Classes\MySQLDataTable.cs). - Added GetMySQLServerMaxAllowedPacket methods to query the MySQL Server for the max_allowed_packet variable. (Classes\Utilities.cs). - Added ActiveWorkbook property and use it to pass the ActiveWorkbook.Excel8CompatibilityMode flag to ImportTableViewForm. Added waiting cursors to append and export operations. (Panels\TaskPaneControl.cs). - Added waiting cursors to append operation and use new MySQLDataTable constructor and manual SetData call. (Forms\AppendDataForm.cs). - Added new Advanced Option to let users pick the number of rows to preview and to detect data from in an Export operation thus speeding up to a couple of seconds the loading of the Export Data Form. (Forms\ExportAdvancedOptionsDialog.cs, Forms\ExportAdvancedOptionsDialog.Designer.cs). - Modified Export Dialog class to now have 2 MySQLDataTable objects, one for just previewing data, detecting data types and let users define column prooperties, and another one to actually load the whole Excel dat

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="StoredDataMappings" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Collections.Generic.List&lt;MySQLColumnMapping&gt;" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ExportLimitPreviewRowsQuantity" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
