--- a/source/app.config
+++ b/source/app.config
@@ -37,6 +37,9 @@
             <setting name="AppendUseFormattedValues" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ExportLimitPreviewRowsQuantity" serializeAs="String">
+                <value>100</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
