- Added more properties to clone to the CloneSchema method of the MySQLDataColumn and MySQLDataTable classes. (Classes\MySQLDataColumn.cs, Classes\MySQLDataTable.cs). - Extracted logic from UseFirstRowAsHeaders method and created AdjustAutoPKValues one since the recalculation of AutoPK values may be needed to bec alled from other places.  Fixed the calculation of AutoPK values in SetData method that was failing when the SetData was called for a cloned MySQLDataTable. (Classes\MySQLDataTable.cs). - Added DATE_FORMAT public constant to properly convert dates to string using the MySQL date format. Change code in the GetInsertingValueForColumnType method to parse a Date object and if successful use the string representation with the DATE_FORMAT. (Classes\Utilities.cs). - Added a new option to the Advanced Options for the Append Dialog to limit the Excel Data to a subset of rows. (Forms\AppendAdvancedOptionsDialog.cs, Forms\AppendAdvancedOptionsDialog.Designer.cs). - Modified Append Dialog class to now have 3 MySQLDataTable objects, one to preview the target table (existing already), one for just previewing data and let users map columns (existing already and used before to also hold all the data), and a new one to actually load the whole Excel data before appending it to an existing table. (Forms\AppendDataForm.cs). - Added label that disclaims that the grid contains just a subset of record for previewing purposes to the Export Data and Append Data forms. (Forms\AppendDataForm.Designer.cs, Forms\ExportDataForm.Designer.cs). - Fixed the version of excel pushed wrongly in a previous push. (MySQL.ForExcel.csproj). - Added AppendLimitPreviewRowsQuantity setting. (Properties\Settings.Designer.cs, Properties\Settings.settings, app.config).

--- a/source/Properties/Settings.settings
+++ b/source/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="ExportLimitPreviewRowsQuantity" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="AppendLimitPreviewRowsQuantity" Provider="MySQL.ForExcel.MySQLForExcelSettings" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
