--- a/source/app.config
+++ b/source/app.config
@@ -40,6 +40,9 @@
             <setting name="ExportLimitPreviewRowsQuantity" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="AppendLimitPreviewRowsQuantity" serializeAs="String">
+                <value>100</value>
+            </setting>
         </MySQL.ForExcel.Properties.Settings>
     </userSettings>
 </configuration>
